--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
 <section id="page-two">
   <h2>Projects</h2>
   <article class="gallery">
-    <div><img src="images/plusplus.png">Plus Plus</div>
-    <div><img src="images/businessblocks.png">BusinessBlocks</div>
-    <div><img src="images/vergepdx.png">VergePDX</div>
-    <div><img src="images/annafidler.png">Anna Fidler</div>
-    <div><img src="images/jklmt.jpg">Jolene Kelley</div>
+    <div><a href="http://ceti.institute" target="_blank"><img src="images/ceti-institute.png" alt="Ceti Institute"></a>Ceti Institute</div>
+    <div><a href="https://plusplus.co/" target="_blank"><img src="images/plusplus.png"></a>Plus Plus</div>
+    <div><img src="images/businessblocks.png" alt="BusinessBlocks">BusinessBlocks</div>
+    <div><a href="http://vergepdx.com" target="_blank"><img src="images/vergepdx.png"></a>VergePDX</div>
+    <div><a href="http://www.annafidler.com/" target="_blank"><img src="images/annafidler.png"></a>Anna Fidler</div>
+    <div><a href="https://jolenekelleylmt.com/" target="_blank"><img src="images/jklmt.jpg"></a>Jolene Kelley</div>
     <div><img src="images/timbuk2.png">Timbuk2 Designs</div>
     <div><img src="images/mednetwork2.png">Mediteranean Action Network</div>
     <div><img src="images/menswearhouse.gif">Men's Wearhouse</div>
