added link to art site

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alanna Risse | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css?family=Arvo|Lato" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Arvo&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Eczar&family=IM+Fell+DW+Pica&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,7 +19,8 @@
     <a href="#page-two">Projects</a>|
     <a href="#page-three">Writing</a>|
     <a href="#page-four">Volunteer</a>|
-    <a href="#page-five">Awards, Grants</a>
+    <a href="#page-five">Awards, Grants</a> | 
+    <a href="https://alannarissse.com/" target="_blank">Art&#10000;</a>
   </div>
 </nav>
 
@@ -27,13 +29,14 @@
   <div class="me"><img src="images/me-bee.jpg" alt="Alanna Risse"></div>
   <article>
     <h3>About me</h3>
-      <p>I've been playing with software and hardware since my late teens. I'm pretty old now, so that's a long time. I spent a very long time in tech companies, design agencies, startups, and ecommerce companies making websites happen. I also try and incorporate electricity into my art projects, whic you can find more about on my <a href="https://alannarisse.com">homepage</a>.</p>
+      <p>I've been playing with software and hardware since my late teens. I'm pretty old now, so that's a long time. I spent a very long time in tech companies, design agencies, startups, and ecommerce companies making websites happen. I also try and incorporate electricity into my <em>art</em> projects, which you can find more about on my <a href="https://alannarisse.com">homepage</a>.</p>
   </article>
   <article class="likes grid-1-1">
     
     <ul><h3>likes:</h3>
       <li>Yodel music</li>
-      <li>Cinnamon</li>
+      <li>Ice Skating</li>
+      <li>Hot Glue Guns</li>
       <li>Pens, all the pens</li>
       <li>Making things out of cardboard</li>
       <li>Pictures of kittens</li>
