--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="#page-three">Writing</a>|
     <a href="#page-four">Volunteer</a>|
     <a href="#page-five">Awards, Grants</a> | 
-    <a href="https://alannarissse.com/" target="_blank">Art&#10000;</a>
+    <a href="https://alannarisse.com/" target="_blank">Art&#10000;</a>
   </div>
 </nav>
 
