--- a/index.html
+++ b/index.html
@@ -1,185 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alanna Risse | Portfolio</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Arvo&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Eczar&family=IM+Fell+DW+Pica&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alanna Risse | Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Eczar&family=IM+Fell+DW+Pica&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<nav id="mainNav">
-  <span>Alanna Risse</span>
-  <div>
-    <a href="#page-one">About</a>|
-    <a href="#page-two">Projects</a>|
-    <a href="#page-three">Writing</a>|
-    <a href="#page-four">Volunteer</a>|
-    <a href="#page-five">Awards, Grants</a> | 
-    <a href="https://alannarisse.com/" target="_blank">Art&#10000;</a>
-  </div>
-</nav>
-
-<section id="page-one">
-  <h1>My Web Design and Development Portfolio!</h1>
-  <div class="me"><img src="images/me-bee.jpg" alt="Alanna Risse"></div>
-  <article>
-    <h3>About me</h3>
-      <p>I've been playing with software and hardware since my late teens. I'm pretty old now, so that's a long time. I spent a very long time in tech companies, design agencies, startups, and ecommerce companies making websites happen. I also try and incorporate electricity into my <em>art</em> projects, which you can find more about on my <a href="https://alannarisse.com">homepage</a>.</p>
-  </article>
-  <article class="likes grid-1-1">
-    
-    <ul><h3>likes:</h3>
-      <li>Yodel music</li>
-      <li>Ice Skating</li>
-      <li>Hot Glue Guns</li>
-      <li>Pens, all the pens</li>
-      <li>Making things out of cardboard</li>
-      <li>Pictures of kittens</li>
-    </ul>
-    <ul><h3>dislikes:</h3>
-      <li>Mosquitos</li>
-      <li>Ungrounded electronics</li>
-      <li>Hot glue gun burns</li>
-    </ul>
-  </article>
-</section>
-<section id="page-two">
-  <h2>Projects</h2>
-  <article class="gallery">
-    <div><a href="http://ceti.institute" target="_blank"><img src="images/ceti-institute.png" alt="Ceti Institute"></a>Ceti Institute</div>
-    <div><a href="https://plusplus.co/" target="_blank"><img src="images/plusplus.png"></a>Plus Plus</div>
-    <div><img src="images/businessblocks.png" alt="BusinessBlocks">BusinessBlocks</div>
-    <div><a href="http://vergepdx.com" target="_blank"><img src="images/vergepdx.png"></a>VergePDX</div>
-    <div><a href="http://www.annafidler.com/" target="_blank"><img src="images/annafidler.png"></a>Anna Fidler</div>
-    <div><a href="https://jolenekelleylmt.com/" target="_blank"><img src="images/jklmt.jpg"></a>Jolene Kelley</div>
-    <div><img src="images/timbuk2.png">Timbuk2 Designs</div>
-    <div><img src="images/mednetwork2.png">Mediteranean Action Network</div>
-    <div><img src="images/menswearhouse.gif">Men's Wearhouse</div>
-    <div><img src="images/hob_final_screen2.png">House of Bagels</div>
-    <div><img src="images/mig33home.jpg">Mig33</div>
-    <div><img src="images/westelmredesign.png">West Elm</div>
-    <div><img src="images/zwingit_home.jpg">Zwigit</div>
-    <div><img src="images/jjwiesler.jpg">JJ Weiesler</div>
-    <div><img src="images/button1.jpg">Button Consignment</div>
-  </article>
-</section>
-<section id="page-three">
-  <h2>Writing</h2>
-  <article>
-    <h3>Book: Unofficial Guide to Photoshop CS2</h3>
-    <div class="grid-2-1">
-      <div>some words
-        <blockquote>
-        4.0 out of 5 stars<br>
-        <strong>Good Book at a great price</strong><br>
-        Reviewed in the United Kingdom on March 18, 2014<br>
-        As a photo retoucher I am always on the look out for books on phtoshop, and this fit what I and looking for and what it contain, as well as a great price.
-        <cite>Adrian Roper</cite></blockquote>
-      </div>
-      <div><img src="images/photoshop.png"></div>
-    </div>
-    
-  </article>
-  <article>
-    <h3>Articles: <a href="https://redtri.com/author/rtalannarisse/">Red Tricycle</a></h3>
-
-    <div class="grid-2-1">
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <nav id="mainNav">
+      <span>Alanna Risse</span>
       <div>
-        <p>Contributing writer for Red Tricycle Magazine 2012 - 2013. Read them all here on my <a href="https://redtri.com/author/rtalannarisse/" target="_blank">bio page</a></p>
+        <a href="#page-one">About</a>| <a href="#page-two">Projects</a>| <a href="#page-three">Writing</a>| <a href="#page-four">Volunteer</a>| <a href="#page-five">Awards, Grants</a> |
+        <a href="https://alannarisse.com/" target="_blank">Art&#10000;</a>
+      </div>
+    </nav>
+
+    <section id="page-one">
+      <h1>My Web Design and Development Portfolio!</h1>
+      <div class="me"><img src="images/me-bee.jpg" alt="Alanna Risse" /></div>
+      <article>
+        <h3>About me</h3>
+        <p>I've been playing with software and hardware since my late teens. I'm pretty old now, so that's a long time. I spent a very long time in tech companies, design agencies, startups, and ecommerce companies making websites happen. I also try and incorporate electricity into my <em>art</em> projects, which you can find more about on my <a href="https://alannarisse.com">homepage</a>.</p>
+      </article>
+      <article class="likes grid-1-1">
         <ul>
-        <li>Where the Wild Things Play</li>
-        <li>Drop-in Daycare Spots so Santa Can Finish Her Shopping</li>
-        <li>A Beach Getaway That’s Only An Hour Away</li>
-        <li>School of Rock: Music Classes for Your Little Musicians</li>
-        <li>Where to Get Your Holiday Sweets, Gluten-Free Style</li>
-        <li>TGIF: A Drop-In Friday Night Clay Extravaganza</li>
-        <li>Kid-Friendly Pubs with Great Outdoor Spaces</li>
+          <h3>likes:</h3>
+          <li>Yodel music</li>
+          <li>Ice Skating</li>
+          <li>Hot Glue Guns</li>
+          <li>Pens, all the pens</li>
+          <li>Making things out of cardboard</li>
+          <li>Pictures of kittens</li>
+        </ul>
+        <ul>
+          <h3>dislikes:</h3>
+          <li>Mosquitos</li>
+          <li>Ungrounded electronics</li>
+          <li>Hot glue gun burns</li>
+        </ul>
+      </article>
+    </section>
+    <section id="page-two">
+      <h2>Projects</h2>
+      <article class="gallery">
+        <div>
+          <a href="http://ceti.institute" target="_blank"><img src="images/ceti-institute.png" alt="Ceti Institute" /></a>Ceti Institute
+        </div>
+        <div>
+          <a href="https://plusplus.co/" target="_blank"><img src="images/plusplus.png" /></a>Plus Plus
+        </div>
+        <div><img src="images/businessblocks.png" alt="BusinessBlocks" />BusinessBlocks</div>
+        <div>
+          <a href="http://vergepdx.com" target="_blank"><img src="images/vergepdx.png" /></a>VergePDX
+        </div>
+        <div>
+          <a href="http://www.annafidler.com/" target="_blank"><img src="images/annafidler.png" /></a>Anna Fidler
+        </div>
+        <div>
+          <a href="https://jolenekelleylmt.com/" target="_blank"><img src="images/jklmt.jpg" /></a>Jolene Kelley
+        </div>
+        <div><img src="images/timbuk2.png" />Timbuk2 Designs</div>
+        <div><img src="images/mednetwork2.png" />Mediteranean Action Network</div>
+        <div><img src="images/menswearhouse.gif" />Men's Wearhouse</div>
+        <div><img src="images/hob_final_screen2.png" />House of Bagels</div>
+        <div><img src="images/mig33home.jpg" />Mig33</div>
+        <div><img src="images/westelmredesign.png" />West Elm</div>
+        <div><img src="images/zwingit_home.jpg" />Zwigit</div>
+        <div><img src="images/jjwiesler.jpg" />JJ Weiesler</div>
+        <div><img src="images/button1.jpg" />Button Consignment</div>
+      </article>
+    </section>
+    <section id="page-three">
+      <h2>Writing</h2>
+      <article>
+        <h3>Book: Unofficial Guide to Photoshop CS2</h3>
+        <div class="grid-2-1">
+          <div>
+            some words
+            <blockquote>
+              4.0 out of 5 stars<br />
+              <strong>Good Book at a great price</strong><br />
+              Reviewed in the United Kingdom on March 18, 2014<br />
+              As a photo retoucher I am always on the look out for books on phtoshop, and this fit what I and looking for and what it contain, as well as a great price.
+              <cite>Adrian Roper</cite>
+            </blockquote>
+          </div>
+          <div><img src="images/photoshop.png" /></div>
+        </div>
+      </article>
+      <article>
+        <h3>Articles: <a href="https://redtri.com/author/rtalannarisse/">Red Tricycle</a></h3>
+
+        <div class="grid-2-1">
+          <div>
+            <p>Contributing writer for Red Tricycle Magazine 2012 - 2013. Read them all here on my <a href="https://redtri.com/author/rtalannarisse/" target="_blank">bio page</a></p>
+            <ul>
+              <li>Where the Wild Things Play</li>
+              <li>Drop-in Daycare Spots so Santa Can Finish Her Shopping</li>
+              <li>A Beach Getaway That’s Only An Hour Away</li>
+              <li>School of Rock: Music Classes for Your Little Musicians</li>
+              <li>Where to Get Your Holiday Sweets, Gluten-Free Style</li>
+              <li>TGIF: A Drop-In Friday Night Clay Extravaganza</li>
+              <li>Kid-Friendly Pubs with Great Outdoor Spaces</li>
+            </ul>
+          </div>
+          <div><img src="images/redtri-biopage1.png" alt="" /></div>
+        </div>
+      </article>
+      <article>
+        <h3>Articles: Medium</h3>
+        <div class="grid-2-1">
+          <div>
+            <p>Supporting Adult Students during the Covid-19 Crisis <a href="https://medium.com/@alannarisse/supporting-adult-students-during-the-covid-19-crisis-175e9d481fa3" class="read">read</a>...</p>
+            <p>Writing Exercise: Your Lifetime Achievement Award <a class="read" href="https://medium.com/@alannarisse/writing-exercise-your-lifetime-achievement-award-8d914317fc95">read...</a></p>
+            <p>Austin Start-ups: Tech Gender Gap</p>
+          </div>
+          <div><img src="images/tech-gender-gap.png" alt="" /></div>
+        </div>
+      </article>
+      <article>
+        <h3>Articles: Untitled Magazine</h3>
+        <div class="grid-2-1">
+          <div>
+            <p><a href="https://alannarisse.com/blog/soundforge-at-museum-of-contemporary-craft/">Soundforge at Museum of Contemporary Craft</a></p>
+            <p><a href="https://alannarisse.com/blog/quality-is-contagious-article-in-untitled/">Quality is Contagious</a></p>
+          </div>
+          <div><img src="images/untitled-soundforge.png" alt="" /></div>
+        </div>
+      </article>
+      <article>
+        <h3>Articles: Port</h3>
+        <div class="grid-2-1">
+          <div>
+            <ul>
+              <li>Nell Warren at PDX Comtemporary</li>
+              <li>Fawn Kreuger at PICA:TBA</li>
+            </ul>
+          </div>
+          <div><img src="images/tech-gender-gap.png" alt="" /></div>
+        </div>
+      </article>
+    </section>
+    <section id="page-four">
+      <article>
+        <h2>Volunteer</h2>
+        <ul>
+          <li>Co-Leader of Girl Scout Troop 45224, 2017-2021</li>
+          <li>Bass instructor, Band Manager, Rock n' Rol Camp for Girls 2019</li>
+          <li>PPS Computer Science Steering Committee Member, Portland Public Schools, 2019</li>
+          <li>Computer Science Department Advisory Board Member, Franklin High School, Portland OR, 2017 - 2019</li>
+          <li>Alumni Councel, PNCA</li>
+          <li>Graduate Student Councel, Event Coordinator, PNCA 2014-2015</li>
+          <li>ACT-W Conference Mock Interviews and Resume Reviews, ChickTech</li>
+        </ul>
+      </article>
+    </section>
+    <section id="page-five">
+      <h2>Awards, Grants, Residencies</h2>
+      <article>
+        <h3>Awards</h3>
+        <ul>
+          <li>Camaraderie Award, PNCA MFA Visual Studies</li>
+          <li>High Distinction Award, CCA, BFA Drawing/Painting, 2008</li>
+          <li>Outstanding Contribution Award, Apple Computer, 1996</li>
+        </ul>
+        <h3>Residencies</h3>
+        <ul>
+          <li>Sou'wester Artist Residency, 2018</li>
+          <li>Leiland Ironworks, 2016</li>
+          <li>Portland Art Building, RACC, 2015</li>
+          <li>Word Cave, Writing Retreat, Sarah Sentilles, 2020, 2021</li>
+        </ul>
+      </article>
+    </section>
+    <footer>
+      <ul>
+        <li>
+          <a href="https://alannarisse.com" target="_blank"><img src="images/icons/noun_tiny home_1134368.png" alt="alannarisse.com" /></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/alanna-risse-portland/" target="_blank"><img src="images/icons/noun_linkedin_2045581.png" alt="linkedIn" /></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/alannarisse/" target="_blank"><img src="images/icons/noun_camera_2830772.png" alt="@alannarisse on instagram.com" /></a>
+        </li>
+        <li>
+          <a href="https://twitter.com/alannarisse" target="_blank"><img src="images/icons/noun_handdrawnbird_2655066.png" alt="@alannarisse on twitter" /></a>
+        </li>
+        <li>
+          <a href="https://github.com/alannarisse" target="_blank"><img src="images/icons/noun_octopus_15331.png" alt="alannarisse on github" /></a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/channel/UCQIuewShH3lMGPsSp-YuScQ" target="_blank"><img src="images/icons/noun_youtube_1146986.png" alt="alanna on youtube" /></a>
+        </li>
       </ul>
-      </div>
-      <div><img src="images/redtri-biopage1.png" alt=""></div>
-    </div>
-  </article>
-  <article>
-    <h3>Articles: Medium</h3>
-    <div class="grid-2-1">
-      <div>
-        <p>Supporting Adult Students during the Covid-19 Crisis <a href="https://medium.com/@alannarisse/supporting-adult-students-during-the-covid-19-crisis-175e9d481fa3" class="read">read</a>...</p>
-        <p>Writing Exercise: Your Lifetime Achievement Award
- <a class="read" href="https://medium.com/@alannarisse/writing-exercise-your-lifetime-achievement-award-8d914317fc95">read...</a></p>
-        <p>Austin Start-ups: Tech Gender Gap</p></div>
-      <div><img src="images/tech-gender-gap.png" alt=""></div>
-    </div>
-  </article>
-  <article>
-    <h3>Articles: Untitled Magazine</h3>
-    <div class="grid-2-1">
-      <div><p><a href="https://alannarisse.com/blog/soundforge-at-museum-of-contemporary-craft/">Soundforge at Museum of Contemporary Craft</a></p>
-        <p><a href="https://alannarisse.com/blog/quality-is-contagious-article-in-untitled/">Quality is Contagious</a></p></div>
-      <div><img src="images/untitled-soundforge.png" alt=""></div>
-    </div>
-  </article>
-  <article>
-    <h3>Articles: Port</h3>
-    <div class="grid-2-1">
-      <div>
-        <ul>
-        <li>Nell Warren at PDX Comtemporary</li>
-        <li>Fawn Kreuger at PICA:TBA</li>
-      </ul></div>
-      <div><img src="images/tech-gender-gap.png" alt=""></div>
-    </div>
-  </article>
-</section>
-<section id="page-four">
-  <article><h2>Volunteer</h2>
-  <ul>
-    <li>Co-Leader of Girl Scout Troop 45224, 2017-2021</li>
-    <li>Bass instructor, Band Manager, Rock n' Rol Camp for Girls 2019</li>
-    <li>PPS Computer Science Steering Committee Member, Portland Public Schools, 2019</li>
-    <li>Computer Science Department Advisory Board Member, Franklin High School, Portland OR, 2017 - 2019</li>
-    <li>Alumni Councel, PNCA</li>
-    <li>Graduate Student Councel, Event Coordinator, PNCA 2014-2015</li>
-    <li>ACT-W Conference Mock Interviews and Resume Reviews, ChickTech</li>
-  </ul>
-  </article>
-</section>
-<section id="page-five">
-  <h2>Awards, Grants, Residencies</h2>
-  <article>
-    <h3>Awards</h3>
-    <ul>
-      <li>Camaraderie Award, PNCA MFA Visual Studies</li>
-      <li>High Distinction Award, CCA, BFA Drawing/Painting, 2008</li>
-      <li>Outstanding Contribution Award, Apple Computer, 1996</li>
-    </ul>
-    <h3>Residencies</h3>
-    <ul>
-      <li>Sou'wester Artist Residency, 2018</li>
-      <li>Leiland Ironworks, 2016</li>
-      <li>Portland Art Building, RACC, 2015</li>
-      <li>Word Cave, Writing Retreat, Sarah Sentilles, 2020, 2021</li>
-    </ul>
-  </article>
-</section>
-<footer>
-  <ul>
-    <li><a href="https://alannarisse.com" target="_blank"><img src="images/icons/noun_tiny home_1134368.png" alt="alannarisse.com"></a></li>
-    <li><a href="https://www.linkedin.com/in/alanna-risse-portland/" target="_blank"><img src="images/icons/noun_linkedin_2045581.png" alt="linkedIn"></a></li>
-    <li><a href="https://www.instagram.com/alannarisse/" target="_blank"><img src="images/icons/noun_camera_2830772.png" alt="@alannarisse on instagram.com"></a></li>
-    <li><a href="https://twitter.com/alannarisse" target="_blank"><img src="images/icons/noun_handdrawnbird_2655066.png" alt="@alannarisse on twitter"></a></li>
-    <li><a href="https://github.com/alannarisse" target="_blank"><img src="images/icons/noun_octopus_15331.png" alt="alannarisse on github"></a></li>
-    <li><a href="https://www.youtube.com/channel/UCQIuewShH3lMGPsSp-YuScQ" target="_blank"><img src="images/icons/noun_youtube_1146986.png" alt="alanna on youtube"></a></li>
-  </ul>
-</footer>
-<script
-  src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
-<script src="script.js"></script>
-</body>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
