added code section

--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alanna Risse | Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Eczar&family=IM+Fell+DW+Pica&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <!--  Essential META Tags -->
+    <meta property="og:title" content="Alanna Risse Design Portfolio" />
+    <meta property="og:type" content="portfolio" />
+    <meta property="og:image" content="https://portfolio.alannarisse.com/images/me-bee.jpg" />
+    <meta property="og:url" content="https://portfolio.alannarisse.com/" />
+    <meta name="twitter:card" content="https://portfolio.alannarisse.com/images/me-bee.jpg" />
+
+    <!--  Non-Essential, But Recommended -->
+    <meta property="og:description" content="Alanna Risse is an artist, creative technologist and web developer. She lives in Portland Oregon and teaching Interactive Web Design at Portland State University." />
+    <meta property="og:site_name" content="Alanna Risse" />
+    <meta name="twitter:image:alt" content="Alanna Risse Portfolio" />
+    <meta name="twitter:site" content="@alannarisse" />
   </head>
   <body>
     <nav id="mainNav">
@@ -21,7 +34,7 @@
     </nav>
 
     <section id="page-one">
-      <h1>My Web Design and Development Portfolio!</h1>
+      <h1 class="animate__animated animate__bounceInDown">My Web Design and Development Portfolio!</h1>
       <div class="me"><img src="images/me-bee.jpg" alt="Alanna Risse" /></div>
       <article>
         <h3>About me</h3>
@@ -33,9 +46,9 @@
           <li>Yodel music</li>
           <li>Ice Skating</li>
           <li>Hot Glue Guns</li>
-          <li>Pens, all the pens</li>
           <li>Making things out of cardboard</li>
           <li>Pictures of kittens</li>
+          <li>Taylor Swift</li>
         </ul>
         <ul>
           <h3>dislikes:</h3>
@@ -46,6 +59,15 @@
       </article>
     </section>
     <section id="page-two">
+      <h2>Code</h2>
+      <article class="gallery">
+        <div>
+          <a href="https://alannarisse.github.io/p5-color-drawing-app/" target="_blank"><img src="images/p5drawingapp.png" alt="p5.js drawing app" /></a>Drawing app <a href="http://github.com/alannarisse/p5-color-drawing-app" target="_blank">[code]</a>
+        </div>
+        <div>
+          <a href="https://alannarisse.github.io/magic-eight-ball/" target="_blank"><img src="images/magic-eight-ball.png" alt="Magic Eight Ball" /></a>Magic Eight Ball <a href="http://github.com/alannarisse/magic-eight-ball" target="_blank">[code]</a>
+        </div>
+      </article>
       <h2>Projects</h2>
       <article class="gallery">
         <div>
